--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CSS3 Landing page</title>
+    <title>CSS3 Flexbox Landing Page</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+    <header>
+      <div class="nav-bar"></div>
+      <div><img src="" alt=""></div>
+    </header>
+    <div class="flex-container">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+    </div>
+    <div class="lower-bar"></div>
+    <footer>
 
+
+    </footer>
   </body>
 </html>
