--- a/index.html
+++ b/index.html
@@ -8,23 +8,21 @@
   <body>
     <header>
       <div class="nav-bar"></div>
-      <div><img src="" alt=""></div>
+      <div><img src="#" alt=""></div>
     </header>
     <div class="flex-container">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-      <div>5</div>
-      <div>6</div>
-      <div>4</div>
-      <div>5</div>
-      <div>6</div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+        <div>9</div>
     </div>
     <div class="lower-bar"></div>
     <footer>
-
-
     </footer>
   </body>
 </html>
